# license

./: CMakeLists.txt  README.md  接口说明文档.html
license/: lic_interface.hpp
src/: CMakeLists.txt  dirent.hpp  lic_def.cpp  lic_def.hpp  lic_implement.cpp  lic_implement.hpp  lic_interface.cpp
src/security/: CBase64Alg.cpp  CBase64Alg.h  CMd5Alg.cpp  CMd5Alg.h  McbDESImpl.hpp  base64.cpp  des.cpp  des.h  md5base.cpp  md5base.h
src/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
test/: CMakeLists.txt  TEST_CLIENT.lic  cli_test  test_client.cpp
test/Debug/: cli_test.ilk
test/file2base64/: a1.lic  base64.h  getBase64licFile  test.cpp
